fix for misaligned imgs on FF

--- a/src/App.css
+++ b/src/App.css
@@ -198,6 +198,7 @@
 .person.content {
   background-color: white;
   height: 500px;
+  clear:both
 }
 
 /* The "Sign Up" button */
